# lzma

./: CMakeLists.txt
lzma-port/: CMakeLists.txt  CONTROL  portfile.cmake
lzma/liblzma/: CommonSettings.props  Config.props  DebugSettings.props  ReleaseSettings.props  VersionInfo.props  liblzma.sln  liblzma.vcxproj  liblzma.vcxproj.filters  x64Settings.props  x86Settings.props
